# npdocstring

./: .gitignore  .lvimrc  .pre-commit-config.yaml  .style.yapf  .travis.yml  LICENSE.md  README.md  npdocstring.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: ci.yml  pythontest-linux.yml
npdocstring/: __about__.py  __init__.py  __main__.py  npdocstring.py
npdocstring/tests/: test_funclassdef_nodes.py  test_generate_function_docstring.py  test_get_function_arguments.py  test_measure_indentation.py  test_pandas.py  test_parse_hint.py
npdocstring/tests/samples/in/: basic.py  defaults.py  hints.py  pandas.py
tests/: test_funclassdef_nodes.py  test_generate_function_docstring.py  test_get_function_arguments.py  test_measure_indentation.py  test_pandas.py  test_parse_hint.py
tests/samples/: defaults.py
tests/samples/in/: basic.py  class_constructor.py  defaults.py  hints.py  pandas.py
